--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,15 @@ body {
   line-height: 1;
 }
 
+/* center and bold currentDay */
+#currentDay {
+  font-size: xx-large;
+  text-align: center;
+  font-weight: bolder;
+  margin-bottom: 25px;
+}
+
+/* bolded font */
 textarea{
   background: transparent;
   border: none;
@@ -11,6 +20,7 @@ textarea{
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  font-weight: bold;
 }
 
 .jumbotron {
@@ -42,19 +52,20 @@ textarea{
   border-top: 1px dashed #000000;
 }
 
+/* text color change based on current time */
 .past {
   background-color: #d3d3d3;
-  color: white;
+  color: rgb(78, 1, 1);
 }
 
 .present {
   background-color: #ff6961;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 .future {
   background-color: #77dd77;
-  color: white;
+  color: rgb(0, 34, 2);
 }
 
 .saveBtn {
