--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,7 @@ textarea{
 .time-block{
   text-align: center;
   border-radius: 15px;
+  padding-top: 25px;
 }
 
 .row {
@@ -46,10 +47,15 @@ textarea{
   border-top: 1px solid white;;
 }
 
+
 .hour {
   background-color: #ffffff;
   color: #000000;
-  border-top: 1px dashed #000000;
+  font-weight: bold;
+  border-top: 2px dashed #000000;
+  border-bottom: 2px dashed #000000;
+  border-left: 2px dashed #000000;
+  
 }
 
 /* text color change based on current time */
